Prepare Glossary for Markdowning

--- a/files/en-us/glossary/css_selector/index.html
+++ b/files/en-us/glossary/css_selector/index.html
@@ -11,7 +11,8 @@ tags:
 ---
 <p>A <strong>CSS selector</strong> is the part of a CSS rule that describes what elements in a document the rule will match. The matching elements will have the rule's specified style applied to them.</p>
 
-<div id="glossary-selector-details">
+<h2>Example</h2>
+
 <p>Consider this CSS:</p>
 
 <pre class="brush: css">p {
@@ -48,11 +49,10 @@ div.warning {
     Be careful! There are wizards present, and they are quick to anger!
   &lt;/div&gt;
 &lt;/div&gt;</pre>
-</div>
 
 <p>The resulting page content is styled like this:</p>
 
-<p>{{EmbedLiveSample("glossary-selector-details", 640, 210)}}</p>
+<p>{{EmbedLiveSample("Example", 640, 240)}}</p>
 
 <h2 id="see_also">See also</h2>
 
@@ -88,4 +88,3 @@ div.warning {
   </ul>
  </li>
 </ul>
-
