--- a/files/en-us/glossary/falsy/index.html
+++ b/files/en-us/glossary/falsy/index.html
@@ -10,8 +10,13 @@ tags:
 
 <p>{{Glossary("JavaScript")}} uses {{Glossary("Type_Conversion", "type conversion")}} to coerce any value to a Boolean in contexts that require it, such as {{Glossary("Conditional", "conditionals")}} and {{Glossary("Loop", "loops")}}.</p>
 
+<p>The following table provides a complete list of JavaScript falsy values:</p>
+
 <table class="standard-table">
-<caption><p><strong>Complete list of JavaScript falsy values</strong></p></caption>
+ <thead>
+  <th>Value</th>
+  <th>Description</th>
+ </thead>
  <tbody>
   <tr>
    <td><code>false</code></td>
@@ -83,4 +88,3 @@ if ("")
  <li>{{Glossary("Truthy")}}</li>
  <li>{{Glossary("Boolean")}}</li>
 </ul>
-
