--- a/files/en-us/glossary/percent-encoding/index.html
+++ b/files/en-us/glossary/percent-encoding/index.html
@@ -9,50 +9,90 @@ tags:
 
 <p>Special characters needing encoding are: <code>':'</code>, <code>'/'</code>, <code>'?'</code>, <code>'#'</code>, <code>'['</code>, <code>']'</code>, <code>'@'</code>, <code>'!'</code>, <code>'$'</code>, <code>'&amp;'</code>, <code>"'"</code>, <code>'('</code>, <code>')'</code>, <code>'*'</code>, <code>'+'</code>, <code>','</code>, <code>';'</code>, <code>'='</code>, as well as <code>'%'</code> itself. Other characters don't need to be encoded, though they could.</p>
 
-<table class="standard-table">
+<table>
+  <thead>
+    <th>Character</th>
+    <th>Encoding</th>
+  </thead>
  <tbody>
   <tr>
    <td><code>':'</code></td>
-   <td><code>'/'</code></td>
-   <td><code>'?'</code></td>
-   <td><code>'#'</code></td>
-   <td><code>'['</code></td>
-   <td><code>']'</code></td>
-   <td><code>'@'</code></td>
-   <td><code>'!'</code></td>
-   <td><code>'$'</code></td>
-   <td><code>'&amp;'</code></td>
-   <td><code>"'"</code></td>
-   <td><code>'('</code></td>
-   <td><code>')'</code></td>
-   <td><code>'*'</code></td>
-   <td><code>'+'</code></td>
-   <td><code>','</code></td>
-   <td><code>';'</code></td>
-   <td><code>'='</code></td>
-   <td><code>'%'</code></td>
-   <td><code>' '</code></td>
+   <td><code>%3A</code></td>
   </tr>
   <tr>
-   <td><code>%3A</code></td>
+   <td><code>'/'</code></td>
    <td><code>%2F</code></td>
+  </tr>
+  <tr>
+   <td><code>'?'</code></td>
    <td><code>%3F</code></td>
+  </tr>
+  <tr>
+   <td><code>'#'</code></td>
    <td><code>%23</code></td>
+  </tr>
+  <tr>
+   <td><code>'['</code></td>
    <td><code>%5B</code></td>
+  </tr>
+  <tr>
+   <td><code>']'</code></td>
    <td><code>%5D</code></td>
+  </tr>
+  <tr>
+   <td><code>'@'</code></td>
    <td><code>%40</code></td>
+  </tr>
+  <tr>
+   <td><code>'!'</code></td>
    <td><code>%21</code></td>
+  </tr>
+  <tr>
+   <td><code>'$'</code></td>
    <td><code>%24</code></td>
+  </tr>
+  <tr>
+   <td><code>'&amp;'</code></td>
    <td><code>%26</code></td>
+  </tr>
+  <tr>
+   <td><code>"'"</code></td>
    <td><code>%27</code></td>
+  </tr>
+  <tr>
+   <td><code>'('</code></td>
    <td><code>%28</code></td>
+  </tr>
+  <tr>
+   <td><code>')'</code></td>
    <td><code>%29</code></td>
+  </tr>
+  <tr>
+   <td><code>'*'</code></td>
    <td><code>%2A</code></td>
+  </tr>
+  <tr>
+   <td><code>'+'</code></td>
    <td><code>%2B</code></td>
+  </tr>
+  <tr>
+   <td><code>','</code></td>
    <td><code>%2C</code></td>
+  </tr>
+  <tr>
+   <td><code>';'</code></td>
    <td><code>%3B</code></td>
+  </tr>
+  <tr>
+   <td><code>'='</code></td>
    <td><code>%3D</code></td>
+  </tr>
+  <tr>
+   <td><code>'%'</code></td>
    <td><code>%25</code></td>
+  </tr>
+  <tr>
+   <td><code>' '</code></td>
    <td><code>%20</code> or <code>+</code></td>
   </tr>
  </tbody>
