--- a/files/en-us/glossary/response_header/index.html
+++ b/files/en-us/glossary/response_header/index.html
@@ -11,7 +11,7 @@ tags:
 
 <p>The following shows a few response and representation headers after a {{HTTPMethod("GET")}} request.</p>
 
-<pre class="brush: http">200 OK
+<pre class="brush: plain">200 OK
 Access-Control-Allow-Origin: *
 Connection: Keep-Alive
 Content-Encoding: gzip
@@ -43,4 +43,3 @@ x-frame-options: DENY</pre>
   </ul>
  </li>
 </ul>
-
