--- a/files/en-us/glossary/cipher/index.html
+++ b/files/en-us/glossary/cipher/index.html
@@ -9,7 +9,7 @@ tags:
 ---
 <p>In {{glossary("cryptography")}}, a <strong>cipher</strong> is an algorithm that can {{glossary("encryption", "encode")}} {{glossary("Plaintext")}} to make it unreadable, and to {{glossary("decryption", "decode")}} it back.</p>
 
-<p id="In-depth">Ciphers were common long before the information age (e.g., <a href="https://en.wikipedia.org/wiki/Substitution_cipher">substitution ciphers</a>, <a href="https://en.wikipedia.org/wiki/Transposition_cipher">transposition ciphers</a>, and <a href="https://en.wikipedia.org/wiki/Permutation_cipher">permutation ciphers</a>), but none of them were cryptographically secure except for the <a href="https://en.wikipedia.org/wiki/One-time_pad">one-time pad</a>.</p>
+<p>Ciphers were common long before the information age (e.g., <a href="https://en.wikipedia.org/wiki/Substitution_cipher">substitution ciphers</a>, <a href="https://en.wikipedia.org/wiki/Transposition_cipher">transposition ciphers</a>, and <a href="https://en.wikipedia.org/wiki/Permutation_cipher">permutation ciphers</a>), but none of them were cryptographically secure except for the <a href="https://en.wikipedia.org/wiki/One-time_pad">one-time pad</a>.</p>
 
 <p>Modern ciphers are designed to withstand {{glossary("attack", "attacks")}} discovered by a {{glossary("cryptanalysis", "cryptanalyst")}}. There is no guarantee that all attack methods have been discovered, but each algorithm is judged against known classes of attacks.</p>
 
