--- a/files/en-us/glossary/client_hints/index.html
+++ b/files/en-us/glossary/client_hints/index.html
@@ -19,7 +19,7 @@ tags:
 
 <p>For example, following <code>Accept-CH</code> in a response below, the client could append {{HTTPHeader("Width")}} and {{HTTPHeader("Downlink")}} headers to all subsequent requests.</p>
 
-<pre class="brush: http">Accept-CH: Width, Downlink</pre>
+<pre class="brush: plain">Accept-CH: Width, Downlink</pre>
 
 <div class="notecard note">
   <p><strong>Note:</strong> Client hints can also be specified in HTML using the {{HTMLElement("meta")}} element with the <code><a href="/en-US/docs/Web/HTML/Element/meta#attr-http-equiv">http-equiv</a></code> attribute.</p>
@@ -31,7 +31,7 @@ tags:
 
 <p>Client hints that determine which resources are sent in responses should "generally" also be included in the affected response's {{HTTPHeader("Vary")}} header. This ensures that a different resource is cached for every different value of the hint header.</p>
 
-<pre class="brush: http">Vary: Accept, Width, ECT</pre>
+<pre class="brush: plain">Vary: Accept, Width, ECT</pre>
 
 <p>You may prefer to omit specifying {{HTTPHeader("Vary")}} or use some other strategy for client hint headers where the value changes a lot, as this effectively makes the resource uncachable (a new cache entry is created for every different value). This applies in particular to network client hints like {{HTTPHeader("Downlink")}} and {{HTTPHeader("RTT")}}. For more information see <a href="/en-US/docs/Web/HTTP/Caching#varying_responses">HTTP Caching > Varying responses</a>.</p>
 
@@ -53,5 +53,5 @@ tags:
  <li><a href="/en-US/docs/Web/HTTP/Headers#client_hints">Client Hints headers</a></li>
  <li><a href="/en-US/docs/Web/HTTP/Headers/Vary"><code>Vary</code> HTTP Header</a></li>
  <li><a href="https://wicg.github.io/client-hints-infrastructure/">Client Hints Infrastructure</a></li>
- 
+
 </ul>
