--- a/files/en-us/glossary/cors-safelisted_response_header/index.html
+++ b/files/en-us/glossary/cors-safelisted_response_header/index.html
@@ -23,8 +23,7 @@ tags:
 <p>Additional headers can be added to the safelist using {{HTTPHeader("Access-Control-Expose-Headers")}}.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>{{HTTPHeader("Content-Length")}} was not part of the original set of safelisted response headers [<a href="https://github.com/whatwg/fetch/pull/626">ref</a>]</p>
+  <p><strong>Note:</strong> {{HTTPHeader("Content-Length")}} was not part of the original set of safelisted response headers [<a href="https://github.com/whatwg/fetch/pull/626">ref</a>]</p>
 </div>
 
 
