--- a/files/en-us/glossary/grid_tracks/index.html
+++ b/files/en-us/glossary/grid_tracks/index.html
@@ -12,11 +12,13 @@ tags:
 
 <h2 id="Track_sizing_in_the_explicit_grid">Track sizing in the explicit grid</h2>
 
-<p>When defining grid tracks using {{cssxref("grid-template-columns")}} and {{cssxref("grid-template-rows")}} you may use any length unit, and also the flex unit, <code>fr</code> which indicates a portion of the available space in the grid container. The example below demonstrates a grid with three column tracks, one of 200 pixels, the second of 1fr, the third of 3fr. Once the 200 pixels has been subtracted from the space available in the grid container, the remaining space is divided by 4. One part is given to column 2, 3 parts to column 3.</p>
+<p>When defining grid tracks using {{cssxref("grid-template-columns")}} and {{cssxref("grid-template-rows")}} you may use any length unit, and also the flex unit, <code>fr</code> which indicates a portion of the available space in the grid container.</p>
 
-<div id="example_1">
-<div class="hidden">
-<pre class="brush: css">* {box-sizing: border-box;}
+<h2>Example</h2>
+
+<p>The example below demonstrates a grid with three column tracks, one of 200 pixels, the second of 1fr, the third of 3fr. Once the 200 pixels has been subtracted from the space available in the grid container, the remaining space is divided by 4. One part is given to column 2, 3 parts to column 3.</p>
+
+<pre class="brush: css hidden">* {box-sizing: border-box;}
 
 .wrapper {
     border: 2px solid #f76707;
@@ -32,7 +34,6 @@ tags:
     color: #d9480f;
 }
 </pre>
-</div>
 
 <pre class="brush: css">.wrapper {
   display: grid;
@@ -49,7 +50,7 @@ tags:
 &lt;/div&gt;
 </pre>
 
-<p>{{ EmbedLiveSample('example_1', '500', '230') }}</p>
+<p>{{ EmbedLiveSample('Example', '500', '230') }}</p>
 </div>
 
 <h2 id="Track_sizing_in_the_implicit_grid">Track sizing in the implicit grid</h2>
