--- a/files/en-us/glossary/round_trip_time_(rtt)/index.html
+++ b/files/en-us/glossary/round_trip_time_(rtt)/index.html
@@ -11,7 +11,7 @@ tags:
 ---
 <p><strong>Round Trip Time (RTT)</strong> is the length time it takes for a data packet to be sent to a destination plus the time it takes for an acknowledgment of that packet to be received back at the origin. The RTT between a network and server can be determined by using the <code>ping</code> command.</p>
 
-<pre class="brush: unix">$ ping example.com
+<pre class="brush: bash">$ ping example.com
 PING example.com (216.58.194.174): 56 data bytes
 64 bytes from 216.58.194.174: icmp_seq=0 ttl=55 time=25.050 ms
 64 bytes from 216.58.194.174: icmp_seq=1 ttl=55 time=23.781 ms
