[Markdown] [Glossary] Prepare Glossary for Markdowning (#9361)
* Prepare Glossary for Markdowning

* Remove stray closing tags

--- a/files/en-us/glossary/grid/index.html
+++ b/files/en-us/glossary/grid/index.html
@@ -14,9 +14,9 @@ tags:
 
 <p>In the example below I have created an <em>explicit grid</em> of three columns and two rows. The <em>third</em> row on the grid is an <em>implicit grid</em> row track, formed due to their being more than the six items which fill the explicit tracks.</p>
 
-<div id="example">
-<div class="hidden">
-<pre class="brush: css">* {box-sizing: border-box;}
+<h2>Example</h2>
+
+<pre class="brush: css hidden">* {box-sizing: border-box;}
 
 .wrapper {
     border: 2px solid #f76707;
@@ -32,7 +32,6 @@ tags:
     color: #d9480f;
 }
 </pre>
-</div>
 
 <pre class="brush: css">.wrapper {
   display: grid;
@@ -52,11 +51,10 @@ tags:
    &lt;div&gt;Eight&lt;/div&gt;
 &lt;/div&gt;
 </pre>
-</div>
 
-<p>{{ EmbedLiveSample('example', '500', '330') }}</p>
+<p>{{ EmbedLiveSample('Example', '500', '330') }}</p>
 
-<h2 id="see_also">See also</h2>
+<h2 id="See_also">See also</h2>
 
 <ul>
  <li><a href="/en-US/docs/Web/CSS/CSS_Grid_Layout/Basic_Concepts_of_Grid_Layout">Basic concepts of grid layout</a></li>
