--- a/files/en-us/glossary/grid_lines/index.html
+++ b/files/en-us/glossary/grid_lines/index.html
@@ -4,11 +4,13 @@ slug: Glossary/Grid_Lines
 tags:
   - CSS Grids
 ---
-<p><strong>Grid lines</strong> are created when you define {{glossary("Grid tracks", "tracks")}} in the explicit grid using <a href="/en-US/docs/Web/CSS/CSS_Grid_Layout">CSS Grid Layout</a>. In the following example there is a grid with three column tracks and two row tracks. This gives us 4 column lines and 3 row lines.</p>
+<p><strong>Grid lines</strong> are created when you define {{glossary("Grid tracks", "tracks")}} in the explicit grid using <a href="/en-US/docs/Web/CSS/CSS_Grid_Layout">CSS Grid Layout</a>.</p>
 
-<div id="example_1">
-<div class="hidden">
-<pre class="brush: css">* {box-sizing: border-box;}
+<h2>Example</h2>
+
+<p>In the following example there is a grid with three column tracks and two row tracks. This gives us 4 column lines and 3 row lines.</p>
+
+<pre class="brush: css hidden">* {box-sizing: border-box;}
 
 .wrapper {
     border: 2px solid #f76707;
@@ -27,7 +29,6 @@ tags:
     color: #d9480f;
 }
 </pre>
-</div>
 
 <pre class="brush: html">&lt;div class="wrapper"&gt;
    &lt;div&gt;One&lt;/div&gt;
@@ -45,12 +46,11 @@ tags:
 }
 </pre>
 
-<p>{{ EmbedLiveSample('example_1', '500', '250') }}</p>
+<p>{{ EmbedLiveSample('Example', '500', '250') }}</p>
 
 <p>Lines can be addressed using their line number. In a left-to-right language such as English, column line 1 will be on the left of the grid, row line 1 on the top. Lines numbers respect the <a href="/en-US/docs/Web/CSS/CSS_Writing_Modes">writing mode</a> of the document and so in a right-to-left language for example, column line 1 will be on the right of the grid. The image below shows the line numbers of the grid, assuming the language is left-to-right.</p>
 
 <p><img alt="Diagram showing the grid with lines numbered." src="1_diagram_numbered_grid_lines.png"></p>
-</div>
 
 <p>Lines are also created in the <em>implicit grid</em> when implicit tracks are created to hold content positioned outside of the <em>explicit grid</em>, however these lines cannot be addressed by a number.</p>
 
@@ -58,9 +58,7 @@ tags:
 
 <p>Having created a grid, you can place items onto the grid by line number. In the following example the item is positioned from column line 1 to column line 3, and from row line 1 to row line 3.</p>
 
-<div id="example_2">
-<div class="hidden">
-<pre class="brush: css">* {box-sizing: border-box;}
+<pre class="brush: css hidden">* {box-sizing: border-box;}
 
 .wrapper {
     border: 2px solid #f76707;
@@ -79,7 +77,6 @@ tags:
     color: #d9480f;
 }
 </pre>
-</div>
 
 <pre class="brush: html">&lt;div class="wrapper"&gt;
    &lt;div class="item"&gt;Item&lt;/div&gt;
@@ -99,16 +96,13 @@ tags:
 }
 </pre>
 
-<p>{{ EmbedLiveSample('example_2', '500', '250') }}</p>
-</div>
+<p>{{ EmbedLiveSample('Placing_items_onto_the_grid_by_line_number', '500', '250') }}</p>
 
 <h2 id="Naming_lines">Naming lines</h2>
 
 <p>The lines created in the <em>explicit grid</em> can be named, by adding the name in square brackets before or after the track sizing information. When placing an item, you can then use these names instead of the line number, as demonstrated below.</p>
 
-<div id="example_3">
-<div class="hidden">
-<pre class="brush: css">* {box-sizing: border-box;}
+<pre class="brush: css hidden">* {box-sizing: border-box;}
 
 .wrapper {
     border: 2px solid #f76707;
@@ -127,7 +121,6 @@ tags:
     color: #d9480f;
 }
 </pre>
-</div>
 
 <pre class="brush: html">&lt;div class="wrapper"&gt;
    &lt;div class="item"&gt;Item&lt;/div&gt;
@@ -147,10 +140,9 @@ tags:
 }
 </pre>
 
-<p>{{ EmbedLiveSample('example_3', '500', '250') }}</p>
-</div>
+<p>{{ EmbedLiveSample('Naming_lines', '500', '250') }}</p>
 
-<h2 id="see_also">See also</h2>
+<h2 id="See_also">See also</h2>
 
 <h3 id="Property_reference">Property reference</h3>
 
