--- a/files/en-us/glossary/gutters/index.html
+++ b/files/en-us/glossary/gutters/index.html
@@ -6,11 +6,11 @@ tags:
 ---
 <p><strong>Gutters</strong> or <em>alleys</em> are spacing between content tracks. These can be created in <a href="/en-US/docs/Web/CSS/CSS_Grid_Layout">CSS Grid Layout</a> using the {{cssxref("column-gap")}}, {{cssxref("row-gap")}}, or {{cssxref("gap")}} properties.</p>
 
+<h2>Example</h2>
+
 <p>In the example below we have a three-column and two-row track grid, with 20-pixel gaps between column tracks and <code>20px</code>-gaps between row tracks.</p>
 
-<div id="example_1">
-<div class="hidden">
-<pre class="brush: css">* {box-sizing: border-box;}
+<pre class="brush: css hidden">* {box-sizing: border-box;}
 
 .wrapper {
     border: 2px solid #f76707;
@@ -26,7 +26,6 @@ tags:
     color: #d9480f;
 }
 </pre>
-</div>
 
 <pre class="brush: css">.wrapper {
   display: grid;
@@ -46,8 +45,7 @@ tags:
 &lt;/div&gt;
 </pre>
 
-<p>{{ EmbedLiveSample('example_1', '300', '280') }}</p>
-</div>
+<p>{{ EmbedLiveSample('Example', '300', '280') }}</p>
 
 <p>In terms of grid sizing, gaps act as if they were a regular grid track however nothing can be placed into the gap. The gap acts as if the grid line at that location has gained extra size, so any grid item placed after that line begins at the end of the gap.</p>
 
