Reverted to list presentation for Chrome item, for consistency

--- a/files/en-us/mozilla/add-ons/webextensions/interact_with_the_clipboard/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/interact_with_the_clipboard/index.html
@@ -120,7 +120,9 @@ browser.alarms.onAlarm.addListener(copy);</pre>
 
 <p>In Chrome:</p>
 
-<p>You don't need <code>"clipboardWrite"</code>, even to write to the clipboard outside a user-generated event handler.</p>
+<ul>
+  <li>You don't need <code>"clipboardWrite"</code>, even to write to the clipboard outside a user-generated event handler.</li>
+</ul>
 
 <p>In Firefox:</p>
 
