--- a/files/en-us/mozilla/firefox/releases/94/index.html
+++ b/files/en-us/mozilla/firefox/releases/94/index.html
@@ -53,6 +53,10 @@ tags:
 
 <h2 id="Changes_for_add-on_developers">Changes for add-on developers</h2>
 
+<ul>
+  <li>Support for <code>partitionKey</code> is added to {{WebExtAPIRef('cookies.cookie')}} to provide the first-party URL of a cookie when it's in storage that is partitioned by top-level site. ({{bug(1669716)}})</li>
+</ul>
+
 <h4 id="removals_webext">Removals</h4>
 
 <h3 id="Other">Other</h3>
@@ -60,4 +64,4 @@ tags:
 
 <h2 id="Older_versions">Older versions</h2>
 
-<p>{{Firefox_for_developers(92)}}</p>
+<p>{{Firefox_for_developers(93)}}</p>
